ui2: allow using 'svn://' URLs